<resources>
    <string name="app_name">Shadow Scroll</string>
    <string name="select_view">Select View</string>
    <string name="vertical_scroll">Vertical Scroll</string>
    <string name="horizontal_scroll">Horizontal Scroll</string>
    <string name="vertical_scroll_with_color">Vertical Scroll with Color</string>
    <string name="vertical_scroll_with_drawable">Vertical Scroll with Drawable</string>
    <string name="vertical_scroll_with_index">Vertical Scroll with Index</string>
    <string name="vertical_scroll_with_list_view">Vertical Scroll with ListView</string>
</resources>
