<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/MenuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/select_view" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/vertical_scroll"
                style="@style/MenuButtonStyle"
                android:text="@string/vertical_scroll" />

            <Button
                android:id="@+id/horizontal_scroll"
                style="@style/MenuButtonStyle"
                android:text="@string/horizontal_scroll" />

            <Button
                android:id="@+id/vertical_scroll_with_color"
                style="@style/MenuButtonStyle"
                android:text="@string/vertical_scroll_with_color" />

            <Button
                android:id="@+id/vertical_scroll_with_drawable"
                style="@style/MenuButtonStyle"
                android:text="@string/vertical_scroll_with_drawable" />

            <Button
                android:id="@+id/vertical_scroll_with_index"
                style="@style/MenuButtonStyle"
                android:text="@string/vertical_scroll_with_index" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>